Quick Reads: Fixed margins and spacings around cards

--- a/styles.css
+++ b/styles.css
@@ -336,7 +336,7 @@ body {
 
 .cards-container {
     width: 90%;
-    margin: 0 auto;
+    margin: 5rem auto 0 auto;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
@@ -352,6 +352,10 @@ body {
     color: var(--color-dark);
     border-radius: 8px;
     margin-bottom: 2rem;
+}
+
+.card-primary:first-of-type {
+    height: fit-content;
 }
 
 /*https://copyprogramming.com/howto/select-first-div-of-mutliple-div-with-same-class-name-duplicate#select-first-div-of-mutliple-div-with-same-class-name-duplicate*/
@@ -442,12 +446,13 @@ body {
 }
 
 .mt--20 {
-    margin-top: -20rem;
+    margin-top: -28rem;
 }
 
-.dark {
+.dark-card {
     background-color: var(--color-dark);
     color: var(--color-light);
+    margin-top: -4.5rem;
 }
 
 .red {
@@ -476,7 +481,11 @@ body {
     }
 
     .mt--20 {
-        margin: 0 auto 2rem;
+        margin: 3rem auto 3rem;
+    }
+
+    .dark-card {
+        margin: 0 auto 2rem auto;
     }
 
     .card-image-container {
@@ -486,6 +495,8 @@ body {
     .card-image-container:nth-of-type(1) {
         margin: -2rem auto 1rem auto;
     }
+
+
 }
 
 
